2015-12-11 Added show and hide commands in Connection and TrueFalse modules
2015-12-10 Added optional parameter to isOrderCorrect function in Shape Tracing module
2015-12-10 Fixed setting item after reset and changing page in MultiAudio module
2015-12-09 Fixed issue with detecting boundaries is Shape Tracing
2015-12-09 Added new property Value type in Text module
2015-12-08 Added Time measurement feature to Player
2015-12-08 Added rulers handling
2015-12-08 Fixed issue with draggable gaps with LaTeX in Text module
2015-12-04 Added Is not activity and Enable more digits in gap properties in Writing Calculations module
2015-12-03 Fixed issue with Limited Check and Check in Basic Math Gaps module
2015-12-02 Added possibility of displaying page from commons
2015-12-01 Added math gaps in Table module
2015-11-30 Added ShowAnswers to Plot module
2015-11-27 Fixed issue with editor height in Paragraph module
2015-11-25 Added displaying coordinates in editor in Coloring and Shape Tracing modules
2015-11-24 Fixed issue with show answers mode in Choice module
2015-11-24 Fixed issue with displaying columns in Connection module
2015-11-19 Fixed issue with adding class in Image Identification module
2015-11-19 Fixed issue with class in draggable gap in Table module
2015-11-13 Added isAllOK event and command in Image Gap module
2015-11-10 Fixed issue with desktop browsers having mobile events in Image Identification, Shape Tracing, Drawing modules
2015-11-10 Fixed issue with incorrect values and visibility in LearnPen(Data/Report) module
2015-11-06 Fixed issue with allAttempted class in Assesment Navigation Bar module
2015-11-05 Fixed issue with zooming in Programmed Drawing module
2015-11-03 Added IsNotActivity property to MemoGame module
2015-11-03 Added changes to Clock module
2015-11-02 Added stop command to YouTube module
2015-10-30 Upgraded Swiffy library to version 7.4
2015-10-30 Added commend getColor(x, y) and property "Disable filling on click" to Coloring module